--- a/part1/ch01/index.html
+++ b/part1/ch01/index.html
@@ -15,7 +15,7 @@
         new Vue({
             el: '#app',
             data: {
-                message: 'Hello Vue.js!'
+                message: 'Hello uOung!'
             }
         });
     </script>
