--- a/part1/ch01/component.html
+++ b/part1/ch01/component.html
@@ -10,6 +10,7 @@
   <div id="app">
     <button>컴포넌트 등록</button>
     <my-component></my-component>
+    <my-local-component></my-local-component>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
@@ -18,8 +19,15 @@
       template: '<div>전역 컴포넌트가 등록되었습니다.</div>'
     });
 
+    var cmp = {
+      template: '<div>지역 컴포넌트가 등록되었습니다.</div>'
+    };
+
     new Vue({
-      el: '#app'
+      el: '#app',
+      components: {
+        'my-local-component': cmp
+      }
     });
   </script>
 </body>
