--- a/part1/ch01/eventbus.html
+++ b/part1/ch01/eventbus.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div id="app">
-    <child-component v-on:show-log="printText" :propsdata="message"></child-component>
+    <child-component v-bind:propsdata="message"></child-component>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
   <script>
-    Vue.component('child-component', {
-      template: '<div><button v-on:click="showLog">show</button><div>{{ propsdata }}</div></div>',
+    Vue.component("child-component", {
       props: ['propsdata'],
-      methods: {
-        showLog: function(){
-          this.$emit('show-log');
-        }
-      },
+      template: '<div> DATA = {{ propsdata }} </div>'
     });
 
     var app = new Vue({
-      el: '#app',
+      el: "#app",
+      template: '<button v-on:click="sendChild">send</button>',
       data: {
-        message: 'Hello Vue! passed from Parent Component'
+        message: 'ACTION'
       },
       methods: {
-        printText: function() {
-            console.log('received an event');
+        sendChild() {
+          console.log("????")
+          message = 'kKK'
         }
       }
     });
   </script>
 </body>
+
 </html>
