--- a/part2/big/public/big.html
+++ b/part2/big/public/big.html
@@ -9,8 +9,8 @@
 		<title>Big Picture by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="@assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="@assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -81,22 +81,22 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="@images/fulls/01.jpg" class="image fit"><img src="@images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="@images/fulls/02.jpg" class="image fit"><img src="@images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="@images/fulls/03.jpg" class="image fit"><img src="@images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="@images/fulls/04.jpg" class="image fit"><img src="@images/thumbs/04.jpg" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="@images/fulls/05.jpg" class="image fit"><img src="@images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="@images/fulls/06.jpg" class="image fit"><img src="@images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
@@ -126,14 +126,14 @@
 			</section>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="@assets/js/jquery.min.js"></script>
+			<script src="@assets/js/jquery.poptrox.min.js"></script>
+			<script src="@assets/js/jquery.scrolly.min.js"></script>
+			<script src="@assets/js/jquery.scrollex.min.js"></script>
+			<script src="@assets/js/browser.min.js"></script>
+			<script src="@assets/js/breakpoints.min.js"></script>
+			<script src="@assets/js/util.js"></script>
+			<script src="@assets/js/main.js"></script>
 
 	</body>
 </html>
